# django-codegen

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
django_codegen/: main.py
django_codegen/cli/: main.py
django_codegen/core/: generator.py  manager.py  writer.py
django_codegen/data/: user.py.txt  user_serializer.py.txt
django_codegen/prompts/: model_prompt.py  openai_client.py  prompt_builder.py  serializer_prompt.py  viewset_prompt.py
django_codegen/utils/: schemes.py
output/models/: empresa_model.py  factura_model.py  manager_model.py  trabajador_model.py
output/serializers/: empresa_serializer.py  factura_serializer.py  manager_serializer.py  trabajador_serializer.py
output/viewsets/: empresa_view.py
