[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-codegen"
version = "0.1.0"
description = "Generador de código de Django utilizando GPT"
dependencies = [
    "openai",
    "click"
]

[project.scripts]
django-codegen = "django_codegen.cli.main:run"