[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-codegen"
version = "0.1.0"
description = "Generador de código de Django utilizando GPT"
dependencies = ["openai", "click", "colorama", "tqdm"]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Pablo Reina", email = "pabloreinagalvez@gmail.com" }]

[project.urls]
homepage = "https://github.com/pabloreina97/django-codegen"
repository = "https://github.com/pabloreina97/django-codegen"

[project.scripts]
django-codegen = "django_codegen.cli.main:run"
