[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-codegen"
version = "0.1.2"
description = "Generador de código de Django utilizando GPT"
dependencies = ["openai", "colorama", "tqdm", "python-dotenv"]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Pablo Reina", email = "pabloreinagalvez@gmail.com" }]

[project.urls]
homepage = "https://github.com/pabloreina97/django-codegen"
repository = "https://github.com/pabloreina97/django-codegen"

[project.scripts]
django-codegen = "django_codegen.main:run"
